Update documentation and clean up.

--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
 		
 			$(document).keywordegg({
 				"keyword": "foo ?bar",
-				"onMatch": function(matches) {
+				"onMatch": function(match) {
 					$("#foo").show();
 				}
 			});
